syntax = "proto3";

package trip;

option go_package = "shared/proto/trip;trip";

service TripService {
  rpc PreviewTrip(PreviewTripReq) returns (PreviewTripRes);
}

message PreviewTripReq {
  string userID = 1;
  Coordinate startLocation = 2;
  Coordinate endLocation = 3;
}

message Coordinate {
  double latitude = 1;
  double longitude = 2;
}

message PreviewTripRes {
  string tripID = 1;
  Route route = 2;
  // repeated - array
  repeated RideFare rideFares = 3;
}

message Route {
  repeated Geometry geometry = 1;
  double distance = 2;
  double duration = 3;
}

message Geometry {
  repeated Coordinate coordinates = 1;
}

message RideFare {
  string id = 1;
  string userID = 2;
  string packageSlug = 3;
  double totalPriceInCents = 4;
}