package main

import (
	pb "ride-sharing/shared/proto/trip"
	"ride-sharing/shared/types"
)

type previewTripRequest struct {
	UserID      string            `json:"userID"`
	PickUp      *types.Coordinate `json:"pickup"`
	Destination *types.Coordinate `json:"destination"`
}

func (p *previewTripRequest) toProto() *pb.PreviewTripReq {
	return &pb.PreviewTripReq{
		UserID: p.UserID,
		StartLocation: &pb.Coordinate{
			Latitude:  p.PickUp.Latitude,
			Longitude: p.PickUp.Longitude,
		},
		EndLocation: &pb.Coordinate{
			Latitude:  p.Destination.Latitude,
			Longitude: p.Destination.Longitude,
		},
	}
}

type startTripRequest struct {
	RideFareID string `json:"rideFareID"`
	UserID     string `json:"userID"`
}

func (c *startTripRequest) toProto() *pb.CreateTripReq {
	return &pb.CreateTripReq{
		RideFareID: c.RideFareID,
		UserID:     c.UserID,
	}
}
